Fix discussion feature